fix: improve visibility of wishlist by altering display property add functionality to close wishlist on click outside or by pressing "Escape" add functionality to close wishlisht on pressing cross icon

--- a/src/HomePage/MegaMenu/MegaMenu.css
+++ b/src/HomePage/MegaMenu/MegaMenu.css
@@ -10,7 +10,7 @@
 }
 
 .navbar_wishlist_close {
-  right: 20px;
+  /* right: 20px; */
 }
 
 .triangle {
